Prevent elments shifting when game over
The 'Play again?' button is appended to the bottom which shifts all
the elements a bit because the css centers all content. A place holder
to preshift the elements so no movement is observed when the button
is appended.

--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,7 @@ header {
 .score {
     font-size: 5rem;
 }
+
+#playAgainPlaceHolder {
+    height: 3rem;
+}
